--- a/01-yandex-music/yandex-music.ipynb
+++ b/01-yandex-music/yandex-music.ipynb
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/datasets/yandex_music_project.csv') # чтение файла с данными и сохранение в df"
+    "df = pd.read_csv('/datasets/xxx.csv') # чтение файла с данными и сохранение в df"
    ]
   },
   {
@@ -279,36 +279,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "\n",
-    "display верный метод для отображения таблиц. Но в данном случае он излишен. Последняя (она же единственная) строка в ячейке выводится автоматически. display стоит использовать, когда нужно вывести не последнюю строку и автоматический вывод не работает. Это часто нужно в циклах и функциях\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid blue 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий студента**\n",
-    "\n",
-    "\n",
-    "Вера, полностью согласен с тобой, по поводу метода display. Здесь и далее использовал этот метод только с мыслью, что так таблица станет более читабельной. Если использование этого метода в данных случаях излишни, применять его больше не буду.  \n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "EO73Kwic_Zct"
    },
@@ -371,55 +341,6 @@
     "\n",
     "\n",
     "Количество значений в столбцах различается. Значит, в данных есть пропущенные значения.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "\n",
-    "Отличное начало, все проблемы обозначены верно\n",
-    "    \n",
-    "Только комментарии в коде лучше писать перед действием, которое этот  код комментирует\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid blue 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий студента**\n",
-    "\n",
-    "\n",
-    "В данном случае опирался на руководство по написанию кода PEP 8 языка Python, а именно оформление \"Встрочных\" комментариев.\n",
-    "    Выдержка из руководства:   \n",
-    "   \"Такой комментарий находится в той же строке, что и инструкция. \"Встрочные\" комментарии должны отделяться по крайней мере двумя пробелами от инструкции. Они должны начинаться с символа # и одного пробела.\"\n",
-    "\n",
-    "Но под конец местами стал оформлять как ты говоришь и как мне показалось этот вариант действительно более удобен при чтении инструкций. Вопрос только в том как принято оформлять правильно?\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера - 2**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Комментарий в конце строки часто уезжает за поле. Все же более удобно при анализе данных писать комментарии до действия. Возможно, в программировании, когда ты хочешь подписать какую-то переменную, так и работает. Но у нас часто несколько действий с таблицами, с набором параметров. В строку не то что комментарии иногда и сами действия не помещаются\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -535,23 +456,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Отлично, все проблемы с названиям решены. \n",
-    "\n",
-    "print здесь также не нужен для вывода\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "5ISfbcfY_Zct"
    },
@@ -658,21 +562,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Хорошо, пропуски верно обработаны, правильно использован цикл.\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "BWKRtBJ3_Zct"
    },
@@ -746,23 +635,6 @@
    ],
    "source": [
     "print(df.duplicated().sum()) # проверка на отсутствие дубликатов"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Ок, все верно, молодец. Классно разобрались с дубликатами, но стоит подписывать выводимые значения не комментариями в коде, а непосредственно при выводе. Например,\n",
-    "    \n",
-    "\"Количество явных дубликатов: 3826\"\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -845,21 +717,6 @@
    ],
    "source": [
     "print(df['genre'].sort_values().unique()) # Просмотр уникальных названий жанров"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Все верно отсортировано\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -1015,21 +872,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Ок, жанры поправили.  Если посмотреть есть еще ошибки в написании названий жанров, но это уже сверх задания\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "WttZHXH0SqKk"
    },
@@ -1132,21 +974,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Молодец, правильно использовал groupby\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "cC2tNrlL_Zcu"
    },
@@ -1205,21 +1032,6 @@
     "    track_list_count = track_list['user_id'].count()        \n",
     "    return  track_list_count                                \n",
     "                                                            "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Функция написан верно. Молодец, что сделал doc-строку с описанием\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -1433,55 +1245,6 @@
     "    \n",
     "count_users_day_city = pd.DataFrame(data=data, columns=columns_name)\n",
     "display(count_users_day_city)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid gold 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#можно лучше**\n",
-    "\n",
-    "таблица в итоге верно собрана. Но использовать цикл - не самое оптимальное решение. Лучше сделать так\n",
-    "\n",
-    "    columns = ['city', 'monday', 'wednesday', 'friday']\n",
-    "    data = [['Moscow', number_tracks('Monday', 'Moscow'), number_tracks('Wednesday', 'Moscow'), number_tracks('Friday', 'Moscow')],\n",
-    "           ['Saint Petersburg', number_tracks('Monday', 'Saint-Petersburg'), number_tracks('Wednesday', 'Saint-Petersburg'), number_tracks('Friday', 'Saint-Petersburg')]\n",
-    "           ]\n",
-    "    result_three_one = pd.DataFrame(columns=columns, data=data)\n",
-    "    display(result_three_one)\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid blue 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий студента**\n",
-    "\n",
-    "Согласен, что в конкретном случае использование циклов выглядит слишком громоздко и неуместно для получения такой маленькой таблицы. Вариант с использованием метода DataFrame был для меня сначала в приоритете. Но потом я подумал, а что если будет необходимость создать таблицу не для двух переменных а для гораздо большего их кличества. В таком случае заполнять список data будет очень утомительно. В итоге решил выбрать вариант с использованием цикла, зная заранее что возможно получу замечание или за \"кривую\" инструкцию или за отсутствие комментариев к ней.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера - 2**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Вообще собрать таблицу - это достаточно специфическое задание. Скорее всего для получения достаточно таблиц ты будешь использовать какие-то выборки, объединения и.т.п. Все де в цикле присоединять достаточно большую таблицу строчка за строчкой - это не оптимально\n",
-    "    \n",
-    "</div>"
    ]
   },
   {
@@ -1742,21 +1505,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "Ок, функция написана верно и результат нужный получен\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "wrCe4MNX_Zcu"
    },
@@ -1937,21 +1685,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий ревьюера**\n",
-    "\n",
-    "**#ок**\n",
-    "\n",
-    "В этой части тоже все верно\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "ykKQ0N65_Zcv"
    },
@@ -1985,37 +1718,6 @@
     "Из данных одного сервиса не всегда можно сделать вывод о всех жителях города.\n",
     "Проверки статистических гипотез покажут, насколько они достоверны, исходя из имеющихся данных. \n",
     "С методами проверок гипотез вы ещё познакомитесь в следующих темах."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid green 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Общий комментарий по проекту**\n",
-    "\n",
-    "Ты отлично поработал над проектом, хороший первый самостоятельный проект.\n",
-    "    \n",
-    "\n",
-    "Ты хорошо идешь по программе и уже освоил много полезных методов. Многие пробелы в python, если они были, теперь закрыты. Дальше все будет интереснее и сложнее. \n",
-    "    \n",
-    "Удачи.\n",
-    "    \n",
-    "Критических замечаний нет. Отправляю тебе проект, чтобы ты мог задать вопросы. Если вопросов нет, пришли мне его обратно, я его приму.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"border:solid blue 2px; padding: 20px\"> \n",
-    "    \n",
-    "**Комментарий студента**\n",
-    "\n",
-    "Вера, спасибо за оперативную и качественную проверку моего проекта. Со всеми замечаниями я согласен, постараюсь учесть их в дальнейшем. \n",
-    "</div>"
    ]
   }
  ],
